diagweave/tests/snapshots/report_snapshots__snap_json_basic.snap
---
source: diagweave/tests/report_snapshots.rs
expression: output
---
{"schema_version":"v0.1.0","error":{"message":"api unauthorized","type":"report_snapshots::report_common::ApiError"},"metadata":{},"diagnostic_bag":{"origin_source_errors":{"roots":[0],"nodes":[{"message":"auth invalid token [code=AUTH.INVALID_TOKEN, severity=error, request_id=tx-json-snap, snapshot test note]","source_roots":[]}],"truncated":false,"cycle_detected":false}},"trace":{},"context":{},"system":{"service":{},"deployment":{},"runtime":{},"request":{}},"attachments":[]}
