diagweave/tests/snapshots/report_snapshots__snap_otel_basic.snap
---
source: diagweave/tests/report_snapshots.rs
expression: output
---
{"records":[{"name":"exception","body":{"String":"auth invalid token"},"severity_text":"error","severity_number":17,"attributes":[{"key":"attachment.note","value":{"String":"otel snapshot note"}},{"key":"error.code","value":{"String":"AUTH.INVALID_TOKEN"}},{"key":"exception.message","value":{"String":"auth invalid token"}},{"key":"exception.raw_data","value":{"KvList":[{"key":"message","value":{"String":"auth invalid token"}},{"key":"type","value":{"String":"report_snapshots::report_common::AuthError"}}]}},{"key":"exception.type","value":{"String":"report_snapshots::report_common::AuthError"}},{"key":"request_id","value":{"String":"tx-otel-1"}}]}]}
