diagweave/tests/snapshots/report_snapshots__snap_otel_with_diag_sources.snap
---
source: diagweave/tests/report_snapshots.rs
expression: output
---
{"records":[{"name":"exception","body":{"KvList":[{"key":"message","value":{"String":"api unauthorized"}},{"key":"type","value":{"String":"report_snapshots::report_common::ApiError"}}]},"severity_text":"warn","severity_number":13,"attributes":[{"key":"exception.type","value":{"String":"report_snapshots::report_common::ApiError"}},{"key":"exception.message","value":{"String":"api unauthorized"}},{"key":"diagnostic_bag.diagnostic_source_errors","value":{"KvList":[{"key":"cycle_detected","value":{"Bool":false}},{"key":"nodes","value":{"Array":[{"KvList":[{"key":"message","value":{"String":"auth invalid token"}},{"key":"source_roots","value":{"Array":[]}},{"key":"type","value":{"String":"report_snapshots::report_common::AuthError"}}]},{"KvList":[{"key":"message","value":{"String":"network down"}},{"key":"source_roots","value":{"Array":[]}},{"key":"type","value":{"String":"std::io::error::Error"}}]}]}},{"key":"roots","value":{"Array":[{"Int":0},{"Int":1}]}},{"key":"truncated","value":{"Bool":false}}]}}]}]}
