diagweave/tests/snapshots/report_snapshots__snap_otel_with_trace.snap
---
source: diagweave/tests/report_snapshots.rs
expression: output
---
{"records":[{"name":"exception","body":{"String":"api unauthorized"},"severity_text":"error","severity_number":17,"trace_id":"4bf92f3577b34da6a3ce929d0e0e4736","span_id":"00f067aa0ba902b7","trace_flags":1,"attributes":[{"key":"exception.message","value":{"String":"api unauthorized"}},{"key":"exception.raw_data","value":{"KvList":[{"key":"message","value":{"String":"api unauthorized"}},{"key":"type","value":{"String":"report_snapshots::report_common::ApiError"}}]}},{"key":"exception.type","value":{"String":"report_snapshots::report_common::ApiError"}},{"key":"trace.parent_span_id","value":{"String":"1111111111111111"}}]},{"name":"db.query","timestamp_unix_nano":1713337100000000000,"severity_text":"info","severity_number":9,"trace_id":"4bf92f3577b34da6a3ce929d0e0e4736","span_id":"00f067aa0ba902b7","trace_flags":1,"attributes":[{"key":"db.system","value":{"String":"postgres"}},{"key":"trace.parent_span_id","value":{"String":"1111111111111111"}}]}]}
