diagweave/tests/snapshots/report_snapshots__snap_pretty_empty_report.snap
---
source: diagweave/tests/report_snapshots.rs
expression: output
---
Error:
  - message: auth invalid token
  - type: report_snapshots::report_common::AuthError
Governance:
  - (none)
Trace:
  - (none)
Stack Trace:
  - (none)
System:
  - (none)
Context:
  - (none)
Attachments:
  - (none)
Display Causes:
  - (none)
Origin Source Errors:
  - (none)
Diagnostic Source Errors:
  - (none)
