diagweave/tests/snapshots/report_snapshots__snap_pretty_nested_sources.snap
---
source: diagweave/tests/report_snapshots.rs
expression: pretty
---
Error:
  - message: api wrapped code=501
  - type: report_snapshots::report_common::ApiError
Governance:
  - (none)
Trace:
  - (none)
Stack Trace:
  - (none)
System:
  - (none)
Context:
  - (none)
Attachments:
  - (none)
Display Causes:
  - (none)
Origin Source Errors:
  - message: api wrapped code=500
  - type: report_snapshots::report_common::ApiError
    - source:
    - message: api unauthorized
    - type: report_snapshots::report_common::ApiError
Diagnostic Source Errors:
  - (none)
